--- a/SecureWalk/src/app/components/menu/menu.component.html
+++ b/SecureWalk/src/app/components/menu/menu.component.html
@@ -32,6 +32,15 @@
       <button mat-menu-item [matMenuTriggerFor]="menuComentario">
         <mat-icon>comment</mat-icon> Comentario
       </button>
+      <button mat-menu-item [matMenuTriggerFor]="menuIncidente">
+        <mat-icon>report_problem</mat-icon> Incidente
+      </button>
+      <button mat-menu-item [matMenuTriggerFor]="menuPregunta">
+        <mat-icon>help_outline</mat-icon> Pregunta
+      </button>
+      <button mat-menu-item [matMenuTriggerFor]="menuEncuesta">
+        <mat-icon>assignment</mat-icon> Encuesta
+      </button>
     </mat-menu>
 
     <button mat-button [matMenuTriggerFor]="menuEventosEncuestas">
@@ -41,17 +50,8 @@
       <button mat-menu-item [matMenuTriggerFor]="menuRuta">
         <mat-icon>alt_route</mat-icon> Ruta
       </button>
-      <button mat-menu-item [matMenuTriggerFor]="menuIncidente">
-        <mat-icon>report_problem</mat-icon> Incidente
-      </button>
       <button mat-menu-item [matMenuTriggerFor]="menuEvaluacionIncidente">
         <mat-icon>rate_review</mat-icon> Evaluación Incidente
-      </button>
-      <button mat-menu-item [matMenuTriggerFor]="menuPregunta">
-        <mat-icon>help_outline</mat-icon> Pregunta
-      </button>
-      <button mat-menu-item [matMenuTriggerFor]="menuEncuesta">
-        <mat-icon>assignment</mat-icon> Encuesta
       </button>
       <button mat-menu-item [matMenuTriggerFor]="menuEncuestaPregunta">
         <mat-icon>quiz</mat-icon> Encuesta Pregunta
@@ -61,6 +61,10 @@
       </button>
     </mat-menu>
 
+     <button mat-button [matMenuTriggerFor]="menuReportes">
+      <mat-icon>build</mat-icon> Reportes
+    </button>
+    
     <span class="toolbar-spacer"></span>
 
     <div class="right-menu">
@@ -108,7 +112,9 @@
 
 <mat-menu #menuEvaluacionIncidente="matMenu">
   <button mat-menu-item routerLink="/evaluacionincidentes">Listar</button>
-  <button mat-menu-item routerLink="/evaluacionincidentes/formulario">Insertar</button>
+  <button mat-menu-item routerLink="/evaluacionincidentes/formulario">
+    Insertar
+  </button>
 </mat-menu>
 
 <mat-menu #menuUsuarioRuta="matMenu">
@@ -118,7 +124,9 @@
 
 <mat-menu #menuEncuestaPregunta="matMenu">
   <button mat-menu-item routerLink="/encuestasPreguntas">Listar</button>
-  <button mat-menu-item routerLink="/encuestasPreguntas/formulario">Insertar</button>
+  <button mat-menu-item routerLink="/encuestasPreguntas/formulario">
+    Insertar
+  </button>
 </mat-menu>
 
 <mat-menu #menuPost="matMenu">
@@ -134,6 +142,10 @@
 <mat-menu #menuRespuesta="matMenu">
   <button mat-menu-item routerLink="/respuestas">Listar</button>
   <button mat-menu-item routerLink="/respuestas/formulario">Insertar</button>
+</mat-menu>
+
+<mat-menu #menuReportes="matMenu">
+  <button mat-menu-item routerLink="/reportes/Dashboard">DashBoard</button>
 </mat-menu>
 
 <mat-menu #menuSalir="matMenu">
